added links, fixed about section responsiveness

--- a/docs/fonts.css
+++ b/docs/fonts.css
@@ -918,7 +918,7 @@
     display: inline-block;
     text-decoration: inherit;
     width: 1em;
-    margin-right: .2em;
+    /* margin-right: .2em; */
     text-align: center;
     /* opacity: .8; */
    
@@ -931,7 +931,7 @@
    
     /* Animation center compensation - margins should be symmetric */
     /* remove if not needed */
-    margin-left: .2em;
+    /* margin-left: .2em; */
    
     /* you can be more comfortable with increased icons size */
     /* font-size: 120%; */
@@ -945,5 +945,5 @@
   }
    
   .icon-stackshare:before { content: '\e800'; } /* '' */
-
+  .icon-muck-rack-2:before { content: '\e801'; } /* '' */
   
