--- a/docs/fonts.css
+++ b/docs/fonts.css
@@ -917,7 +917,7 @@
    
     display: inline-block;
     text-decoration: inherit;
-    width: 1em;
+    /* width: 1em; */
     /* margin-right: .2em; */
     text-align: center;
     /* opacity: .8; */
