--- a/docs/style.css
+++ b/docs/style.css
@@ -99,6 +99,14 @@ button:hover {
 	cursor: pointer;
 }
 
+input, textarea {
+	transition: all 0.3s ease;
+}
+
+input:hover, textarea:hover {
+	opacity: 0.7;
+}
+
 /* MAIN PAGE HEADER */
 #front-page-heading {
 	text-transform: uppercase;
@@ -810,4 +818,18 @@ button:hover {
 
 .activeContent {
 	display: flex;
+	animation: slide 0.5s forwards;
+
+	animation-direction: alternate;
+}
+
+.tabbed-container-content {
+	
+}
+
+@keyframes slide {
+	0% {transform: translateX(0%) }
+	50% {transform: translateX(100%) }
+	100% {transform: translateX(0%) }
+
 }
